Fixed alignment
Fixed alignment

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
     background-color: aliceblue;
     padding: 0;
-    margin: 0;
+    
     max-width: 800px;
     margin: auto;
     color: white;
